# ProyectoPortalMO

./: .gitignore  CMakeLists.txt  Makefile  README.md  install_manifest.txt  yamltest.ptl
OLD/: add_player_command.cpp  add_player_command.h  body.cpp  command.cpp  command.h  input_receiver.h  left_command.cpp  left_command.h  match.cpp  match.h  world.cpp  world.h
OLD/block/: block.cpp  block.h  shape.h  square_shape.h  stone_material.cpp  stone_material.h
OLD/chell/: chell.cpp  chell.h  chell_state.cpp  idle_state.cpp  idle_state.h  jumping_state.h  running_state.h
build-QTEditorPortalV2-Descktop-Debug/: Makefile  moc_editor_listado_de_activables.cpp  moc_mainwindow.cpp  ui_editor_listado_de_activables.h  ui_mainwindow.h
client/include/: OutputFormat.h  SdlTexture.h  SdlWindow.h  acid.h  background.h  block.h  bullet.h  button.h  cake.h  chell.h  client.h  crosshair.h  entity.h  entityFactory.h  gameView.h  gate.h  inputManager.h  input_sender.h  inputter.h  laser.h  login.h  output_receiver.h  outputter.h  pauseView.h  pauseWidget.h  pin.h  portal.h  renderableObject.h  rock.h  serverManager.h  soundManager.h  stageReceiver.h  textWidget.h  textureManager.h  updateReceiver.h  videoRecorder.h
client/src/: OutputFormat.cpp  SdlTexture.cpp  SdlWindow.cpp  acid.cpp  background.cpp  block.cpp  bullet.cpp  button.cpp  cake.cpp  chell.cpp  client.cpp  crosshair.cpp  entityFactory.cpp  gameView.cpp  gate.cpp  inputManager.cpp  input_sender.cpp  inputter.cpp  laser.cpp  login.cpp  main.cpp  output_receiver.cpp  outputter.cpp  pauseView.cpp  pauseWidget.cpp  pin.cpp  portal.cpp  rock.cpp  serverManager.cpp  soundManager.cpp  stageReceiver.cpp  textWidget.cpp  textureManager.cpp  updateReceiver.cpp  videoRecorder.cpp
common/include/: action.h  creator.h  creatorMesage.h  creatorMessage.h  entity.h  gameInfo.h  keypad.h  network_exception.h  person.h  port.h  position.h  protected_queue.h  protocol.h  protocolo.h  real_socket.h  real_socket_factory.h  runtime_exception.h  socket.h  status.h  thread.h  timer.h  types.h  update.h
common/src/: action.cpp  creator.cpp  creatorMesage.cpp  creatorMessage.cpp  gameInfo.cpp  key.cpp  keypad.cpp  network_exception.cpp  person.cpp  position.cpp  protocol.cpp  protocolo.cpp  real_socket.cpp  real_socket_factory.cpp  runtime_exception.cpp  socket.cpp  timer.cpp  update.cpp
config/: config.yaml
editor/: CMakeLists.txt  QTEditorPortalV2.pro  README  cmake.sh  editor_barrera_de_energia.cpp  editor_bloque_de_metal.cpp  editor_bloque_de_metal.h  editor_bloque_de_roca.cpp  editor_bloque_de_roca.h  editor_boton.cpp  editor_boton.h  editor_celda_grafica.cpp  editor_celda_grafica.h  editor_componente_compuerta.cpp  editor_componente_compuerta.h  editor_compuerta.cpp  editor_compuerta.h  editor_compuerta_and.cpp  editor_compuerta_and.h  editor_compuerta_or.cpp  editor_compuerta_or.h  editor_compuerta_regular.cpp  editor_compuerta_regular.h  editor_defines.h  editor_escenario_grafico.cpp  editor_escenario_grafico.h  editor_fabrica.cpp  editor_fabrica.h  editor_item_grafico.cpp  editor_item_grafico.h  editor_listado_de_activables.cpp  editor_listado_de_activables.h  editor_pastel.cpp  editor_pastel.h  editor_personaje_chell.cpp  editor_personaje_chell.h  editor_receptor.cpp  editor_receptor.h  editorv3.files  mainwindow.cpp  (+4 more)
editor/config/: config.yaml
libs/Box2D-master/: premake5.lua
maps/: level_01.yaml  map_00.yaml  map_01.yaml  map_02.yaml  map_portal_test_00.yaml  map_portal_test_01.yaml  map_portal_test_02.yaml  nivel_0.yaml  test_bullet_00.yaml  test_bullet_01.yaml  test_bullet_life.yaml  test_bullet_rock_00.yaml  test_chell_dies_from_acid_00.yaml  test_chell_dies_from_bullet.yaml  test_chell_dies_from_bullet_01.yaml  test_chell_dies_from_bullet_02.yaml  test_chell_dies_from_bullet_03.yaml  test_chell_jumps_00.yaml  test_config.yaml  test_gate_00.yaml  test_gate_01.yaml  test_jump.yaml  test_portal_00.yaml  test_portal_01.yaml  test_rock.yaml  test_rock_falls_on_chell_00.yaml  test_running.yaml  test_running_cake.yaml
model/include/: block.h  material.h  protected_priority_queue.h  rock_material.h  square_shape.h
model/src/: material.cpp  shape.cpp  square_shape.cpp
movies/: 07-06-2019-17-06-36.mpeg
pantalla_inicial/: CMakeLists.txt  PantallaInicial.pro  cmake.sh  init_seleccionar_escenario.cpp  init_seleccionar_escenario.h  init_seleccionar_escenario.ui  init_seleccionar_servidor.cpp  init_seleccionar_servidor.h  init_seleccionar_servidor.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  recursos.qrc
server/include/: accepter.h  add_player_command.h  block.h  body.h  body_creator_factory.h  broadcaster.h  character.h  chell.h  chell_state.h  clientManager.h  client_manager.h  command.h  command_factory.h  default_command.h  diagonal_shape.h  energy_ball.h  falling_state.h  game.h  game_loop.h  idle_state.h  inputReceiver.h  input_receiver.h  left_command.h  match.h  math_ext.h  pin.h  player.h  playerLogin.h  rock_material.h  run_left_command.h  running_left_state.h  running_state.h  serializer.h  server.h  stage.h  stop_left_command.h  stopping_state.h  updateSender.h  update_factory.h  update_sender.h  (+5 more)
server/src/: accepter.cpp  add_player_command.cpp  block.cpp  body.cpp  body_creator_factory.cpp  broadcaster.cpp  character.cpp  chell.cpp  chell_state.cpp  clientManager.cpp  client_manager.cpp  command_factory.cpp  contact_listener.cpp  default_command.cpp  diagonal_shape.cpp  energy_ball.cpp  falling_state.cpp  game.cpp  game_loop.cpp  idle_state.cpp  inputReceiver.cpp  input_receiver.cpp  left_command.cpp  main.cpp  match.cpp  math_ext.cpp  metal_material.cpp  pin.cpp  player.cpp  playerLogin.cpp  ray_cast_closest_body_callback.cpp  rock_material.cpp  run_left_command.cpp  running_left_state.cpp  running_state.cpp  serializer.cpp  server.cpp  stage.cpp  stop_left_command.cpp  stopping_state.cpp  (+6 more)
test/: boolean_test.h  foo_test.h  protected_queue_test.h
test/server/: acid_test.h  binary_block_test.h  block_test.h  boolean_block_factory_test.h  bullet_test.h  chell_test.h  delete_body_instruction_test.h  gate_test.h  (+7 more)
(+154 files in other folders)
